2002-09-23  Keisuke Nishida  <knishida@netlab.jp>

	* strings.c (cob_unstring): Don't use alloca.

2002-09-12  Keisuke Nishida  <knishida@netlab.jp>

	* numeric.h (cob_decimal): Use exponent instead of decimals.
	* numeric.c: Related functions updated.
	
2002-09-12  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.c (sequential_open): Set f->file.fd to 0 on error.

2002-09-06  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.h, fileio.c: INDEXED files has been reimplemented using db1.

2002-08-05  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.c (sort_compare): Prototype for db-3.1.x.

2002-08-02  Keisuke Nishida  <knishida@netlab.jp>

	* common.h, common.c (cob_cmp_all): Unify the former cob_cmp_all
	and cob_cmp_all_str.
	* common.c (cmp_internal): New function.
	(cob_cmp_str, cob_cmp_field): Use it.

2002-08-01  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.h (COB_ORG_SORT, COB_ORG_MAX): New macros.
	(cob_file): New member `sort_nkeys' and `sort_keys'.
	* fileio.c (sort_file): New variable.
	(sort_compare, sort_open, sort_close, sort_read, sort_write):
	New functions.
	(sort_funcs): New variable.
	(cob_sort_keys, cob_sort_using, cob_sort_giving): New functions.
	(cob_init_fileio): Init sort functions.

2002-08-01  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (COB_ASCENDING, COB_DESCENDING): New macros.

2002-07-31  Keisuke Nishida  <knishida@netlab.jp>

	* common.c (cob_init_config): New function.
	(cob_init): Updated.  Load the config file first.

2002-07-30  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.c (indexed_write_internal): New function.
	(indexed_write, indexed_rewrite): Updated.

2002-07-30  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.c (lineseq_read): Check for EOF.

2002-07-30  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.h (cob_fileio_funcs): `write' takes only one argument.
	(sequential_write, lineseq_write, relative_write, indexed_write):Ditto.
	(cob_write): Updated.
	
2002-07-30  Keisuke Nishida  <knishida@netlab.jp>
