@@ -20,7 +20,10 @@
 #ifndef COB_CONFIG_H
 #define COB_CONFIG_H
 
-/* Define to 1 if cc supports computed-goto */
-#define COB_HAVE_COMPUTED_GOTO	@COMPUTED_GOTO@
+/* Define to 1 if you have the <db1/db.h> header file. */
+#undef HAVE_DB1_DB_H
+
+/* Define to 1 if you have the <db.h> header file. */
+#undef HAVE_DB_H
 
 #endif /* COB_CONFIG_H_ */
